# chris-grau-plugin-platform

./: .env-updated  .gitignore  .railway-deploy  ARCHITECTURE.md  BUILD_STATUS.md  COMMIT_STANDARD.md  Dockerfile  README.md  SPRINT_LOG.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  compile-plugin.yml  detailed-notes.yml  validate-template.yml
backend/: .env.example  .gitkeep  README.md  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260322_init/: migration.json  migration.sql
backend/src/: index.ts
backend/src/jobs/: compile.ts
backend/src/lib/: supabase.ts
backend/src/routes/: plugins.ts  preview.ts
backend/src/services/: ai.ts
frontend/: .env.local.example  .gitignore  .gitkeep  README.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/chat/stream/: route.ts
frontend/app/studio/: page.tsx
frontend/components/: KeyboardPreview.tsx
frontend/components/chat/: ChatPanel.tsx
frontend/components/preview/: PluginPreview.tsx  WebAudioPreview.tsx
frontend/lib/: api.ts
scripts/: inject_spec.py  package_plugin.sh  render_preview  render_preview.swift  test_inject_layers.sh  validate_plugin.sh
supabase/.temp/: pooler-url  project-ref
templates/: .gitkeep
templates/multi-effect-v1/: CMakeLists.txt
templates/multi-effect-v1/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  generated_config.h
templates/reverb-plate-v1/: CMakeLists.txt  dsp_spec.json
templates/reverb-plate-v1/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
